overflow bug fix

--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@ body{
   -o-user-select: none;
   user-select: none;
   position: relative;
-  height: 100%;
+  height: 150%;
   background-color: #21A3E4;
   font-family: 'Helvetica', 'Arial';
 }
